dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_local_inflight_budget_blocks_write.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.100000000 [main] DEBUG Writer dropping binding_id=99 status=Open next_offset=6 inflight_bytes=3 remote_max_data=14720
0:00:00.100000000 [main] DEBUG Sent FIN binding_id=99
0:00:00.100000000 [main] DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.100000000 [main] DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
