dc/s2n-quic-dc/src/snapshots/stream__writer__tests__server_reset_received_while_open.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=5
0 [main] DEBUG poll_remote_budget received messages binding_id=1 status=Open msg_count=1
0 [main] DEBUG event=on_shutdown prev=Open next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0 [main] DEBUG Writer dropping binding_id=1 status=Shutdown next_offset=5 remote_max_data=1048576
